<resources>
    <string name="about_available">Available</string>
    <string name="about_copy_to_clipboard">Copy to clipboard</string>
    <string name="about_not_available">Not available</string>
    <string name="accuracy_high">High</string>
    <string name="accuracy_low">Low</string>
    <string name="accuracy_medium">Medium</string>
    <string name="accuracy_unknown">Unknown</string>
    <string name="accuracy_unreliable">Unreliable</string>
    <string name="action_popup">Popup settings</string>
    <string name="action_settings">Settings</string>
    <string name="angle">Angle</string>
    <string name="anti_banding_50hz">50Hz</string>
    <string name="anti_banding_60hz">60Hz</string>
    <string name="anti_banding_auto">Auto</string>
    <string name="anti_banding_off">Off</string>
    <string name="app_name">Open Camera</string>
    <string name="audio_control_start">Start audio listening</string>
    <string name="audio_control_stop">Stop audio listening</string>
    <string name="audio_disabled">Audio disabled</string>
    <string name="audio_listener_failed">Failed to initalise audio listening</string>
    <string name="audio_listener_started">Make a loud noise</string>
    <string name="auto_level_disable">Disable auto-level</string>
    <string name="auto_level_enable">Enable auto-level</string>
    <string name="auto_stabilise_info">Auto-level will automatically rotate photos so that they appear level.\10\10Note that this means images will come out a slightly lower resolution (due to the rotation and cropping that\'s required).</string>
    <string name="auto_stabilise_not_supported">Sorry, auto-level not supported\10on this device</string>
    <string name="back_camera">Back Camera</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="bluetooth_current_remote">Current remote:</string>
    <string name="bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="bluetooth_scan">Scan</string>
    <string name="bottom_of_screen">at bottom of screen</string>
    <string name="bright">Bright</string>
    <string name="camera">Camera</string>
    <string name="camera_error">Serious camera error</string>
    <string name="camera_id">ID</string>
    <string name="cancel_panorama">Cancel panorama</string>
    <string name="cancelled_focus_bracketing">Cancelled focus bracketing</string>
    <string name="cancelled_repeat_mode">Cancelled repeat mode</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cant_access_folder">Can\'t access this folder</string>
    <string name="cant_write_folder">Can\'t write to this folder</string>
    <string name="capturing">Capturing…</string>
    <string name="centre_of_screen">at centre</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="color_effect">Color effect</string>
    <string name="color_effect_aqua">Aqua</string>
    <string name="color_effect_blackboard">Blackboard</string>
    <string name="color_effect_mono">Mono</string>
    <string name="color_effect_negative">Negative</string>
    <string name="color_effect_none">None</string>
    <string name="color_effect_posterize">Posterize</string>
    <string name="color_effect_sepia">Sepia</string>
    <string name="color_effect_solarize">Solarize</string>
    <string name="color_effect_whiteboard">Whiteboard</string>
    <string name="cycle_flash">Cycle flash</string>
    <string name="cycle_raw">Cycle RAW modes</string>
    <string name="dark">Dark</string>
    <string name="direction">Direction</string>
    <string name="donate">Donate</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="duration_10m">10 minutes</string>
    <string name="duration_10s">10 seconds</string>
    <string name="duration_11m">11 minutes</string>
    <string name="duration_12m">12 minutes</string>
    <string name="duration_15m">15 minutes</string>
    <string name="duration_15s">15 seconds</string>
    <string name="duration_1h">1 hour</string>
    <string name="duration_1m">1 minute</string>
    <string name="duration_20m">20 minutes</string>
    <string name="duration_25m">25 minutes</string>
    <string name="duration_2m">2 minutes</string>
    <string name="duration_30m">30 minutes</string>
    <string name="duration_30s">30 seconds</string>
    <string name="duration_3m">3 minutes</string>
    <string name="duration_3s">3 seconds</string>
    <string name="duration_45m">45 minutes</string>
    <string name="duration_4m">4 minutes</string>
    <string name="duration_5m">5 minutes</string>
    <string name="duration_5s">5 seconds</string>
    <string name="duration_6m">6 minutes</string>
    <string name="duration_7m">7 minutes</string>
    <string name="duration_8m">8 minutes</string>
    <string name="duration_9m">9 minutes</string>
    <string name="duration_unlimited">Unlimited</string>
    <string name="enter_new_folder">Enter new folder name</string>
    <string name="exposure">Exposure</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="exposure_compensation_seekbar">Seekbar to change exposure compensation</string>
    <string name="exposure_compensation_zoom">Increase or decrease exposure compensation</string>
    <string name="exposure_lock">Lock exposure</string>
    <string name="exposure_locked">Exposure locked</string>
    <string name="exposure_shutter_speed">Shutter speed</string>
    <string name="exposure_unlock">Unlock exposure</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="face_detected">face</string>
    <string name="face_detection_disable">Disable face detection</string>
    <string name="face_detection_disabled">Face detection disabled</string>
    <string name="face_detection_enable">Enable face detection</string>
    <string name="face_detection_enabled">Face detection enabled</string>
    <string name="faces_detected">faces</string>
    <string name="failed_create_folder">Failed to create folder</string>
    <string name="failed_to_auto_stabilise">Failed to auto-level</string>
    <string name="failed_to_open_camera_1">FAILED TO OPEN CAMERA.</string>
    <string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
    <string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
    <string name="failed_to_process_hdr">Failed to create HDR image</string>
    <string name="failed_to_process_panorama">Failed to create Panorama image</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="failed_to_record_video">Failed to record video</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="failed_to_save_photo_raw">Failed to save RAW photo</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="failed_to_stamp">Failed to stamp info to photo</string>
    <string name="failed_to_start_camera_preview">Failed to start camera preview</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="feet_abbreviation">ft</string>
    <string name="finish_panorama">Finish panorama</string>
    <string name="flash_auto">Flash Auto</string>
    <string name="flash_frontscreen_auto">Screen Flash Auto</string>
    <string name="flash_frontscreen_on">Screen Flash On</string>
    <string name="flash_frontscreen_torch">Screen Torch</string>
    <string name="flash_mode">Flash Mode</string>
    <string name="flash_off">Flash Off</string>
    <string name="flash_on">Flash On</string>
    <string name="flash_red_eye">Red Eye</string>
    <string name="flash_torch">Torch</string>
    <string name="focus_bracketing_add_infinity">Add infinite distance</string>
    <string name="focus_bracketing_source_distance">Focus bracketing source distance</string>
    <string name="focus_bracketing_target_distance">Focus bracketing target distance</string>
    <string name="focus_distance">Focus distance</string>
    <string name="focus_mode">Focus Mode</string>
    <string name="folder_exists">Folder already exists</string>
    <string name="fps">FPS</string>
    <string name="free_memory">Free</string>
    <string name="front_camera">Front Camera</string>
    <string name="gallery">Gallery</string>
    <string name="gb_abbreviation">GB</string>
    <string name="grid">Grid</string>
    <string name="hdr_info">HDR mode is useful for shots with a large variation in brightness. It works by taking multiple shots at different exposures, and combining them to create the final image.\10\10Note that HDR is not suitable for scenes with fast movement, and may result in less accurate color reproduction.\10\10Taking photos in HDR mode will be slower.</string>
    <string name="high_speed">High Speed</string>
    <string name="image_saving_notification">Saving images…</string>
    <string name="infinite">Infinite</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="intro_text">Touch to focus, and press the blue camera button to take photos. \10\10To disable maximum screen brightness, see Settings/On screen GUI/\"Force maximum brightness\". To save to SD cards on Android 5+, see Settings/More camera controls/\"Use Storage Access Framework\". For more help, click \"Online help\" from Settings.</string>
    <string name="iso">ISO</string>
    <string name="left_of_screen">at left of screen</string>
    <string name="location_not_available">GPS location not available</string>
    <string name="magnetic_accuracy_info">Your device\'s compass needs calibrating to improve its accuracy. This can be done by moving your device in a figure of 8 motion.\10\10Current accuracy:</string>
    <string name="magnetic_accuracy_title">Compass direction</string>
    <string name="max_duration">Max duration</string>
    <string name="max_filesize">Max file size</string>
    <string name="mb_abbreviation">MB</string>
    <string name="metres_abbreviation">m</string>
    <string name="new_folder">New Folder</string>
    <string name="next">Next</string>
    <string name="no_burst">no burst</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="no_permission">PERMISSIONS NOT AVAILABLE</string>
    <string name="noise_reduction_mode_default">Default</string>
    <string name="noise_reduction_mode_fast">Fast</string>
    <string name="noise_reduction_mode_high_quality">High Quality</string>
    <string name="noise_reduction_mode_minimal">Minimal</string>
    <string name="noise_reduction_mode_off">Off</string>
    <string name="not_supported">not supported on your device</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="pause_video">Pause video recording</string>
    <string name="preference_location_enable">Store location data</string>
    <string name="preference_textstamp_summary">Stamp photos with a custom text</string>
    <string name="remote_connected">Remote connected</string>
    <string name="share">Share Photo</string>
    <string name="stamp_enable">Enable photo stamp</string>
    <string name="switch_to_front_camera">Switch to front camera</string>
    <string name="switch_to_video">Switch to video mode</string>
    <string name="take_photo">Take Photo</string>
    <string name="trash">Delete Last Picture</string>
    <string name="white_balance">White balance</string>
    <string name="white_balance_lock">Lock white balance</string>
    <string name="zoom">Zoom</string>
</resources>