<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:id="@+id/preview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true"/>
    <ImageButton android:id="@+id/take_photo" android:background="@null" android:padding="10dp" android:layout_width="100dp" android:layout_height="100dp" android:src="@drawable/take_photo_selector" android:scaleType="fitCenter" android:layout_centerVertical="true" android:onClick="clickedTakePhoto" android:contentDescription="@string/take_photo"/>
    <ImageButton android:id="@+id/switch_camera" android:background="@drawable/circle_background" android:padding="5dp" android:layout_width="60dp" android:layout_height="60dp" android:src="@drawable/switch_camera" android:scaleType="fitCenter" android:layout_above="@+id/take_photo" android:onClick="clickedSwitchCamera" android:contentDescription="@string/switch_to_front_camera"/>
    <ImageButton android:id="@+id/pause_video" android:background="@null" android:padding="10dp" android:visibility="gone" android:layout_width="70dp" android:layout_height="70dp" android:src="@drawable/ic_pause_circle_outline_white_48dp" android:scaleType="fitCenter" android:layout_above="@+id/take_photo" android:onClick="clickedPauseVideo" android:contentDescription="@string/pause_video"/>
    <ImageButton android:id="@+id/cancel_panorama" android:background="@null" android:padding="10dp" android:visibility="gone" android:layout_width="70dp" android:layout_height="70dp" android:src="@drawable/baseline_close_white_48" android:scaleType="fitCenter" android:layout_above="@+id/take_photo" android:onClick="clickedCancelPanorama" android:contentDescription="@string/cancel_panorama"/>
    <ImageButton android:id="@+id/switch_video" android:background="@null" android:padding="10dp" android:layout_width="60dp" android:layout_height="60dp" android:src="@drawable/take_video" android:scaleType="fitCenter" android:layout_below="@+id/take_photo" android:onClick="clickedSwitchVideo" android:contentDescription="@string/switch_to_video" android:alpha="0.55"/>
    <ImageButton android:id="@+id/take_photo_when_video_recording" android:background="@null" android:padding="10dp" android:visibility="gone" android:layout_width="70dp" android:layout_height="70dp" android:src="@drawable/take_photo_when_video_recording" android:scaleType="fitCenter" android:layout_below="@+id/take_photo" android:onClick="clickedTakePhotoVideoSnapshot" android:contentDescription="@string/take_photo"/>
    <ZoomControls android:id="@+id/zoom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/zoom" android:alpha="0.5"/>
    <SeekBar android:id="@+id/zoom_seekbar" android:background="@color/seekbar_background" android:layout_width="150dp" android:layout_height="50dp" android:layout_marginLeft="0dp" android:layout_marginTop="0dp" android:layout_marginRight="20dp" android:layout_marginBottom="0dp" android:contentDescription="@string/zoom"/>
    <SeekBar android:id="@+id/focus_seekbar" android:background="@color/seekbar_background" android:visibility="gone" android:layout_width="150dp" android:layout_height="50dp" android:layout_marginLeft="135dp" android:layout_marginTop="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" android:contentDescription="@string/focus_distance"/>
    <SeekBar android:id="@+id/focus_bracketing_target_seekbar" android:background="@color/seekbar_background" android:visibility="gone" android:layout_width="150dp" android:layout_height="50dp" android:layout_marginLeft="135dp" android:layout_marginTop="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" android:contentDescription="@string/focus_bracketing_target_distance"/>
    <Button android:id="@+id/gui_anchor" android:padding="1dp" android:visibility="invisible" android:layout_width="0dp" android:layout_height="0dp" android:scaleType="fitCenter"/>
    <ImageButton android:id="@+id/gallery" android:background="@color/icons_background" android:padding="8dp" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/baseline_photo_library_white_48" android:scaleType="fitCenter" android:onClick="clickedGallery" android:contentDescription="@string/gallery"/>
    <ImageButton android:id="@+id/settings" android:background="@color/icons_background" android:padding="10dp" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/settings" android:scaleType="fitCenter" android:onClick="clickedSettings" android:contentDescription="@string/action_settings"/>
    <ImageButton android:id="@+id/popup" android:background="@color/icons_background" android:padding="10dp" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/popup" android:scaleType="fitCenter" android:onClick="clickedPopupSettings" android:contentDescription="@string/action_popup"/>
    <ImageButton android:id="@+id/exposure" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/ic_exposure_white_48dp" android:scaleType="fitCenter" android:onClick="clickedExposure" android:contentDescription="@string/exposure"/>
    <ImageButton android:id="@+id/exposure_lock" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/exposure_unlocked" android:scaleType="fitCenter" android:onClick="clickedExposureLock" android:contentDescription="@string/exposure_lock"/>
    <ImageButton android:id="@+id/white_balance_lock" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/white_balance_unlocked" android:scaleType="fitCenter" android:onClick="clickedWhiteBalanceLock" android:contentDescription="@string/white_balance_lock"/>
    <ImageButton android:id="@+id/cycle_raw" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/raw_off_icon" android:scaleType="fitCenter" android:onClick="clickedCycleRaw" android:contentDescription="@string/cycle_raw"/>
    <ImageButton android:id="@+id/store_location" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/ic_gps_fixed_white_48dp" android:scaleType="fitCenter" android:onClick="clickedStoreLocation" android:contentDescription="@string/preference_location_enable"/>
    <ImageButton android:id="@+id/text_stamp" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/baseline_text_fields_white_48" android:scaleType="fitCenter" android:onClick="clickedTextStamp" android:contentDescription="@string/preference_textstamp_summary"/>
    <ImageButton android:id="@+id/stamp" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/ic_text_format_white_48dp" android:scaleType="fitCenter" android:onClick="clickedStamp" android:contentDescription="@string/stamp_enable"/>
    <ImageButton android:id="@+id/auto_level" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/auto_stabilise_icon" android:scaleType="fitCenter" android:onClick="clickedAutoLevel" android:contentDescription="@string/auto_level_enable"/>
    <ImageButton android:id="@+id/cycle_flash" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/flash_off" android:scaleType="fitCenter" android:onClick="clickedCycleFlash" android:contentDescription="@string/cycle_flash"/>
    <ImageButton android:id="@+id/face_detection" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/ic_face_white_48dp" android:scaleType="fitCenter" android:onClick="clickedFaceDetection" android:contentDescription="@string/face_detection_enable"/>
    <ImageButton android:id="@+id/audio_control" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/ic_mic_white_48dp" android:scaleType="fitCenter" android:onClick="clickedAudioControl" android:contentDescription="@string/audio_control_start"/>
    <ImageButton android:id="@+id/kraken_icon" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/baseline_bluetooth_white_48" android:scaleType="fitCenter" android:contentDescription="@string/remote_connected"/>
    <ImageButton android:id="@+id/trash" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/trash" android:scaleType="fitCenter" android:onClick="clickedTrash" android:contentDescription="@string/trash"/>
    <ImageButton android:id="@+id/share" android:background="@color/icons_background" android:padding="10dp" android:visibility="gone" android:layout_width="@dimen/onscreen_button_size" android:layout_height="@dimen/onscreen_button_size" android:src="@drawable/share" android:scaleType="fitCenter" android:onClick="clickedShare" android:contentDescription="@string/share"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/sliders_container" android:background="@color/seekbar_background" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <RelativeLayout android:layout_gravity="center" android:id="@+id/iso_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RelativeLayout android:layout_gravity="center" android:id="@+id/iso_buttons" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout android:layout_gravity="center" android:id="@+id/exposure_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@+id/exposure_seekbar_text" android:layout_width="36dp" android:layout_height="36dp" android:src="@drawable/ic_exposure_white_48dp" android:contentDescription="@string/exposure_compensation"/>
            <SeekBar android:id="@+id/exposure_seekbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/exposure_seekbar_text" android:layout_alignTop="@+id/exposure_seekbar_text" android:layout_alignBottom="@+id/exposure_seekbar_text" android:contentDescription="@string/exposure_compensation_seekbar" android:alpha="0.9"/>
            <ZoomControls android:gravity="center" android:id="@+id/exposure_seekbar_zoom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/exposure_seekbar" android:layout_alignLeft="@+id/exposure_seekbar" android:layout_alignRight="@+id/exposure_seekbar" android:contentDescription="@string/exposure_compensation_zoom"/>
        </RelativeLayout>
        <RelativeLayout android:layout_gravity="center" android:id="@+id/manual_exposure_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@+id/iso_seekbar_text" android:layout_width="36dp" android:layout_height="36dp" android:src="@drawable/iso_icon" android:contentDescription="@string/iso"/>
            <SeekBar android:id="@+id/iso_seekbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/iso_seekbar_text" android:layout_alignTop="@+id/iso_seekbar_text" android:layout_alignBottom="@+id/iso_seekbar_text" android:contentDescription="@string/iso" android:alpha="0.9"/>
            <ImageView android:id="@+id/exposure_time_seekbar_text" android:layout_width="36dp" android:layout_height="36dp" android:src="@drawable/baseline_shutter_speed_white_48" android:layout_below="@+id/iso_seekbar" android:contentDescription="@string/exposure_shutter_speed"/>
            <SeekBar android:id="@+id/exposure_time_seekbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/exposure_time_seekbar_text" android:layout_alignTop="@+id/exposure_time_seekbar_text" android:layout_alignBottom="@+id/exposure_time_seekbar_text" android:contentDescription="@string/exposure_shutter_speed" android:alpha="0.9"/>
        </RelativeLayout>
        <RelativeLayout android:layout_gravity="center" android:id="@+id/manual_white_balance_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@+id/white_balance_seekbar_text" android:layout_width="36dp" android:layout_height="36dp" android:src="@drawable/ic_colorize_white_48dp" android:contentDescription="@string/white_balance"/>
            <SeekBar android:id="@+id/white_balance_seekbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/white_balance_seekbar_text" android:layout_alignTop="@+id/white_balance_seekbar_text" android:layout_alignBottom="@+id/white_balance_seekbar_text" android:contentDescription="@string/white_balance" android:alpha="0.9"/>
        </RelativeLayout>
    </LinearLayout>
    <FrameLayout android:id="@+id/locker" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <ScrollView android:id="@+id/popup_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/popup" android:layout_alignRight="@+id/popup" android:fadeScrollbars="false"/>
    <ScrollView android:id="@+id/hide_container" android:background="@android:color/black" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"/>
</RelativeLayout>
